welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: ')' expected but integer literal found.
  if (a<=19 && a>=13 || b<=19 && b>=13 || c<=19 && c>=13 || a<=19 && a>=13 && b<=19 && b>=13 || b<=19 && b>=13 && c<=19 && c>=13 || <=19 && a>=13 && c<=19 && c>=13 || <=19 && a>=13 && b<=19 && b>=13 && c<=19 && c>=13) {
                                                                                                                                      ^hasTeen:5: error: illegal start of simple expression
} 
^